k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: frontend-ns
  labels:
    app: web-frontend
spec:
  type: ClusterIP
  selector:
    app: web-frontend
  ports:
  - name: http
    port: 80
    targetPort: http
